# marlowe-lambda

./: .gitignore  ReadMe.md  cabal.project  flake.nix  marlowe-lambda.cabal  package.sh
app/: Main.hs
cli/: Main.hs
deploy/: bootstrap  mainnet.config  mainnet.env  preprod.config  preprod.env  preview.config  preview.env
examples/: zcb.ipynb
pipe/: Main.hs
src/Language/Marlowe/: Lambda.hs
src/Language/Marlowe/Lambda/: Build.hs  Client.hs  List.hs  Sign.hs  Submit.hs  Types.hs
web/: .gitignore  ReadMe.md  both.html  counterparty.html  deploy.sh  index.html  model.html  package.json  party.html  raw.html  run.sh  view.css
web/src/: controller.js  lambda.js  raw.js  secrets.js.gpg
