cabal-version      : 3.0
name               : marlowe-lambda
version            : 0.1.0.0
synopsis           : Marlowe support for IOG's Contract-Lambda
license            : Apache-2.0
license-file       : LICENSE
author             : Brian W Bush <brian.bush@iohk.io>
maintainer         : Brian W Bush <brian.bush@iohk.io>
category           : Network
build-type         : Simple
extra-source-files : ReadMe.md

library
  exposed-modules   : Language.Marlowe.Lambda
                      Language.Marlowe.Lambda.Client
                      Language.Marlowe.Lambda.List
  hs-source-dirs    : src
  build-depends     : base >= 4.9 && < 5
                    , aws-lambda-haskell-runtime
                    , bytestring
                    , containers
                    , data-default
                    , marlowe-protocols
                    , marlowe-runtime
                    , monad-control
                    , transformers
                    , transformers-base
                    , network
                    , typed-protocols
  ghc-options       : -Wall
                      -Wnoncanonical-monad-instances
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Widentities
                      -Wunused-packages
  default-language  : Haskell2010

executable marlowe-lambda
  main-is           : Main.hs
  hs-source-dirs    : app
  build-depends     : base >= 4.9 && < 5
                    , aws-lambda-haskell-runtime
                    , data-default
                    , marlowe-lambda
  ghc-options       : -Wall
                      -Wnoncanonical-monad-instances
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Widentities
                      -Wunused-packages
                      -O2
  default-language  : Haskell2010

executable marlowe-lambda-cli
  main-is           : Main.hs
  hs-source-dirs    : cli
  build-depends     : base >= 4.9 && < 5
                    , data-default
                    , marlowe-lambda
  ghc-options       : -Wall
                      -Wnoncanonical-monad-instances
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Widentities
                      -Wunused-packages
  default-language  : Haskell2010
