cabal-version      : 3.0
name               : marlowe-lambda
version            : 0.2.1.0
synopsis           : Marlowe support for IOG's Contract-Lambda
license            : Apache-2.0
license-file       : LICENSE
author             : Brian W Bush <brian.bush@iohk.io>
maintainer         : Brian W Bush <brian.bush@iohk.io>
category           : Network
build-type         : Simple
extra-source-files : ReadMe.md

executable marlowe-lambda
  main-is           : Main.hs
  hs-source-dirs    : app
  build-depends     : base >= 4.9 && < 5
                    , aws-lambda-haskell-runtime
                    , marlowe-runtime
                    , marlowe-apps
                    , optparse-applicative
  ghc-options       : -Wall
                      -Wnoncanonical-monad-instances
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Widentities
                      -Wunused-packages
                      -O2
  default-language  : Haskell2010

executable marlowe-lambda-cli
  main-is           : Main.hs
  hs-source-dirs    : cli
  build-depends     : base >= 4.9 && < 5
                    , aeson
                    , bytestring
                    , eventuo11y
                    , eventuo11y-dsl
                    , eventuo11y-json
                    , marlowe-apps
                    , mtl
                    , optparse-applicative
                    , text
  ghc-options       : -Wall
                      -Wnoncanonical-monad-instances
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Widentities
                      -Wunused-packages
  default-language  : Haskell2010
